--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
           </p>
           <div class="hero-cta">
             <a class="cta" href="#kontakt">Kontakt</a>
-            <span class="sub">Objednání přes zprávu nebo telefon</span>
           </div>
         </div>
       </div>
@@ -203,6 +202,6 @@
       </div>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
